--- a/WebContent/ex1.html
+++ b/WebContent/ex1.html
@@ -3,6 +3,51 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script>
+var number = 5;
+var number2 = new Number(5);
+console.log(number + ":" + typeof number);
+console.log(number2 + ":" + typeof number2);
+console.log(number + number2);
+
+// 내장타입 객체(number, boolean, string, function) 는 확장이 되지 않는다.
+number.myVal = 20;
+console.log(number.myVal);
+
+// Object 타입의 객체는 확장이 가능하다.
+number2.myVal = 20;
+console.log(number2.myVal);
+
+var pi = 3.14;
+console.log(pi + ":" + typeof pi);
+
+var str = "Hello World";
+var str2 = new String("Hello World");
+console.log(str + ":" + typeof str);
+console.log(str2 + ":" + typeof str2);
+
+var b = false;
+var b2 = new Boolean(false);
+console.log(b + ":" + typeof b);
+console.log(b2 + ":" + typeof b2);
+
+var f = function(){};
+var f2 = new Function("x","y","return x + y;");
+console.log(f() + ":" + typeof f);
+console.log(f2(1,2) + ":" + typeof f2);
+
+var a = [];
+console.log(a + ":" + typeof a);
+
+var o = {};
+var o2 = new Object();
+console.log(o2)
+console.log(o2 + ":" + typeof o2);
+
+//console 브라우저 내장 객체
+console.log("로그입니다.");
+console.warn("경고입니다.");
+console.error("에러입니다.");
+console.info("정보입니다.")
 
 </script>
 </head>
