--- a/WebContent/ex3.html
+++ b/WebContent/ex3.html
@@ -4,22 +4,20 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript">
-
-document.write( "<pre>" );
-
-for(var i = 1; i <= 9; i++ ){
-	for( var j = 1; j <= 9; j++ ) {
-		document.write( j + " x " + i + " = " + j*i );
-		document.write( "\t" );
+document.write("<pre>");
+for(var i=1; i<10; i++){
+	for(var j=1; j<10; j++){
+		document.write(j+" * "+i+" = "+j*i);
+		document.write("\t");
 	}
-	document.write( "\n" );
+	document.write("\n");
 }
-
-document.write( "</pre>" );
-
+document.write("</pre>");
 </script>
 </head>
 <body>
-
+	<pre> <!-- pre 태그 내부의 내용이 그대로 출력됨 -->
+2 * 1 = 2	3 * 1 = 3
+	</pre>
 </body>
 </html>
