--- a/WebContent/ex4.html
+++ b/WebContent/ex4.html
@@ -4,16 +4,14 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript">
-document.write( "<pre>" );
-
-for(var i = 0; i <= 20; i++ ){
-	for( var j = 0; j < 20-i; j++ ) {
-		document.write( "*" );
+document.write("<pre>");
+for(var i=0; i<5; i++){
+	for(var j=0; j<5-i; j++){
+		document.write("*");
 	}
-	document.write( "\n" );
+	document.write("\n");
 }
-
-document.write( "</pre>" );
+document.write("</pre>");
 </script>
 </head>
 <body>
