--- a/WebContent/hello.html
+++ b/WebContent/hello.html
@@ -3,12 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-
-<script>
-//document.write("<strong>Hello World</strong>");
-alert("Hello World");
-</script>
-
+<script type="text/javascript" src="hello.js"></script>
 </head>
 <body>
 <h1>Hello World</h1>
