--- a/WebContent/ex6-13.html
+++ b/WebContent/ex6-13.html
@@ -4,14 +4,32 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script>
+var url = 'http://localhost:8080/mysite2/user?n=안"대"혁!&e=kickscar@gmail.com';
+url2 = escape(url) //Deprecated
+console.log(url2);
 
-var escaped = escape("<h3>Here's a headline!</h3>");
-//alert( escaped );
+url3 = encodeURI(url);
+console.log(url3);
 
-var url = "http://mysite.com/?stuff=\"안 대혁!&bar=";
-var encodedURL = encodeURI(url);
+var url = 'http://localhost:8080/mysite2';
+var name = '안"대"혁!';
 
-alert(encodedURL);
+url4 = url + "?n=" +encodeURIComponent(name);
+console.log(url4);
+
+// 타이머 설정 - 한 번만 실행
+setTimeout(function(){
+	console.log("redirect");
+	location.href = url3;
+}, 1000*3);
+
+// 타이머 설정2 - 여러번 실행(interval)
+var num = 0;
+// var intervalId = setInterval(function(){
+// 	console.log(++num);
+// 	if(num == 10) clearInterval(intervalId);
+// }, 1000);
+
 </script>
 </head>
 <body>
