--- a/WebContent/ex6-16.html
+++ b/WebContent/ex6-16.html
@@ -4,37 +4,44 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script>
-function myFunction( ) {
-  // 값
-  alert("I have an argument! " + arguments[0] );
-	  
-  // 객체
-  alert(arguments[1].bar);
-	  
-  // 함수 
-  arguments[2]();
-} 
+// 함수 파라미터
 
+// var f = function(arg1, arg2, arg3){
+// 	console.log(arg1);
+// 	console.log(arg2.name);
+// 	arg3();
+// }
 
-var b = { bar: "baz" };
+var f = function(){
+	console.log(arguments[0]);
+	console.log(arguments[1].name);
+	arguments[2]();
+}
 
-/*
-var f = function(){ 
-	alert("Victory!");
-} 
-*/
+var sum = function(){
+	var sum = 0;
+	for(var i=0; i<arguments.length; i++){
+		sum += arguments[i];
+	}
+	return sum;
+}
 
-/*
-myFunction( "foo", { bar: "baz"}, funtion(){ 
-	alert("Victory");
+// anonymous parameters
+f(10, {
+	name: "둘리",
+	age: 20
+}, function(){
+	console.log("hello world");
 });
-*/
 
+//anonymous function
+(function(a, b, c){
+	console.log(a + b + c);
+})(10,20,30);
 
-(function(){ 
-	alert("Victory");
-})();
-
+console.log(sum(10,20));
+console.log(sum(10,20,30));
+console.log(sum(10,20,30,40));
 
 </script>
 </head>
