--- a/WebContent/ex6-5.html
+++ b/WebContent/ex6-5.html
@@ -4,46 +4,68 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script>
-var Rectangle = function( x1, y1, x2, y2, color ) {
+var Rectangle = function(x1, y1, x2, y2, color){
 	this.x1 = x1;
 	this.y1 = y1;
 	this.x2 = x2;
 	this.y2 = y2;
-	this.color = color;
+	this.backgroundColor = color;
 }
 
+// prototype 활용
 Rectangle.prototype.show = function(){
-	var width = (this.x2 - this.x1 + 1 );
-	var height = (this.y2 - this.y1 + 1 );
-	document.write(
-		"<div style='" +
-		
-		"position:absolute;" +
-		
-		"left:"              + this.x1    + "px;"  +
-		
-		"top:"               + this.y1    + "px;"  +
-		
-		"width:"             + width      + "px; " +
-		
-		"height:"            + height     + "px; " +
-		
-		"background-color:"  + this.color + ";"    +
-		
-		"border:1px solid #000" +
-		
-		"'>" +
-		
-		
-		"</div>");
-	
+	document.write("<div style='position:absolute; "+
+			"left:"+this.x1+"px; top:"+this.y1+"px; "+
+			"height: "+(this.y2-this.y1)+"px; width: "+(this.x2-this.x1)+"px; "+
+			"background: "+this.backgroundColor+"'></div>");
+}
+///////////////////
+
+
+// prototype을 사용하지 않았을 때
+var rect1 ={
+	x1: 100,
+	y1: 100,
+	x2: 200,
+	y2: 200,
+	backgroundColor: "#0ff",
+	show: function(){
+		document.write("<div style='position:absolute; "+
+				"left:"+this.x1+"px; top:"+this.y1+"px; "+
+				"height: "+(this.y2-this.y1)+"px; width: "+(this.x2-this.x1)+"px; "+
+				"background: "+this.backgroundColor+"'></div>");
+	}
 }
 
-var r1 = new Rectangle(100, 100, 199, 299, "#ddd");
-r1.show();
+var rect2 ={
+		x1: 300,
+		y1: 300,
+		x2: 500,
+		y2: 500,
+		backgroundColor: "#f0f",
+		show: function(){
+			document.write("<div style='position:absolute; "+
+					"left:"+this.x1+"px; top:"+this.y1+"px; "+
+					"height: "+(this.y2-this.y1)+"px; width: "+(this.x2-this.x1)+"px; "+
+					"background: "+this.backgroundColor+"'></div>");
+		}
+}
+/////////////////////////////
+
+window.onload = function(){
+	rect1.show();
+	rect2.show();
+	
+	//prototype 사용
+	var r1 = new Rectangle(200, 200, 250, 250, "#00f");
+	var r2 = new Rectangle(250, 250, 300, 300, "#f00");
+	r1.show();
+	r2.show();
+}
 </script>
 </head>
 <body>
-
+<!-- 	<div style='position:absolute; left:100px; top:100px; height: 100px; width: 100px; background: #00f'> -->
+<!-- 	</div> -->
 </body>
 </html>
