--- a/WebContent/ex5.html
+++ b/WebContent/ex5.html
@@ -32,9 +32,25 @@ var MyObject = function(name, age){
 	this.name = name;
 	this.age = age;
 };
+MyObject.prototype.school = "bit academy";
+MyObject.prototype.course = "Java Full Stack";
+MyObject.prototype.showInfo = function(){
+	console.log(this.name + ":" +
+				this.age + ":" +
+				this.school + ":" +
+				this.course);
+};
+
 
 var o4 = new MyObject("도우너", 13);
 console.log(o4);
+o4.showInfo();
+
+o4.school = "douzone academy";
+o4.showInfo();
+console.log(o4);
+var o5 = new MyObject("희동이", 12);
+o5.showInfo();
 </script>
 </head>
 <body>
