--- a/WebContent/ex6-12.html
+++ b/WebContent/ex6-12.html
@@ -7,15 +7,11 @@
 
 var str = "string1 string2 string3";
 var a = str.split(' ');
+console.log(a);
 
 a = "abcdefgh".split(":"); 
+console.log(a);
 	
-// 배열을 확인하는 코드를 직접 작성해 보세요.
-var count = a.length;
-for( var i = 0; i < count; i++ ){
-	document.write( a[i] + "<br>" );
-}
-
 </script>
 </head>
 <body>
