--- a/WebContent/ex6-14.html
+++ b/WebContent/ex6-14.html
@@ -4,23 +4,28 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script type="text/javascript">
-var d = new Date(2013, 6, 23);  //2013 년 7월 23일  
-document.write(
-  " 년도: " + (d.getYear() + 1900) + "<BR>" + 
-  " 월: " + (d.getMonth() + 1) + "<BR>" + 
-  " 일은: " + d.getDate() + "<BR>" + 
-  " 요일은: " + d.getDay() + "<BR>" + 
-  " 시는: " + d.getHours() + "<BR>" + 
-  " 분은: " + d.getMinutes() + "<BR>" + 
-  " 초는: " + d.getSeconds() + "<BR>" + 
-  " 밀리초: " + d.getMilliseconds() + "<HR>" );
- 
-d.setYear(2014);  // 2014년 세팅
-document.write(d + "<HR>");
-document.write(d.getDay() + "<HR>");
+var now = new Date();
+console.log(now);
+
+var d = new Date(2019, 1, 8, 12, 30, 40);  //2019 년 2월 8일  12:30:40 
+console.log(d + ":" + typeof d);
+
+console.log(
+  " 년도: " + (d.getYear() + 1900) + "\n" +
+  " 월: " + (d.getMonth() + 1) + "\n" +
+  " 일: " + d.getDate() + "\n" +
+  " 요일: " + ['일','월','화','수','목','금','토'][d.getDay()] + "\n" +
+  " 시: " + d.getHours() + "\n" +
+  " 분: " + d.getMinutes() + "\n" +
+  " 초: " + d.getSeconds() + "\n" +
+  " 밀리초: " + d.getMilliseconds());
+
+d.setYear(2020);  // 2014년 세팅
+console.log(d);
+console.log(d.getDay());
 
 d.setMonth( 11 ); // 12월 세팅
-document.write(d + "<HR>");
+console.log(d);
 
 
 </script>
